# agent-tools-mcp

./: .gitignore  API.md  CMakeLists.txt  NOTICE  README.md  package.xml
examples/: llm_chat.cpp  multi_server.cpp  registry_server.py  simple_client.cpp  start_all_services.sh
examples/configs/: config_http.json  config_mixed.json  config_mlink_gateway_stdio.json  config_registry.json  config_socket.json  config_stdio.json  mlink_http.json
examples/services/calculator/: http_server.py  socket_server.py  stdio_server.py
examples/services/system_monitor/: http_server.py
examples/services/system_monitor/rust/: Cargo.toml
examples/services/system_monitor/rust/src/: main.rs
examples/services/time/: http_server.py  socket_server.py  stdio_server.py
include/: mcp_service.hpp
include/internal/: json_rpc.h  transport_http.h  transport_stdio.h  transport_unix_socket.h
src/: json_rpc.cpp  mcp.cpp  mcp_client.cpp  mcp_manager.cpp  transport_http.cpp  transport_stdio.cpp  transport_unix_socket.cpp
